--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -35,12 +35,12 @@ main:
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/carolin-brandt"
   buttons:
-    # - title: "Download CV"
-    #   icon: ""
-    #   url: "https://drive.google.com/"
     - title: "Write me!"
       icon: ""
       url: "mailto:c.e.brandt@tudelft.nl"
     - title: "Google Scholar"
       icon: ""
       url: "https://scholar.google.com/citations?hl=de&user=gYM4MwkAAAAJ"
+    - title: "CV"
+      icon: ""
+      url: "/cv.pdf"
