fix defense date

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -11,7 +11,7 @@ about:
   text: "
         <p>
           <strong>Hello! I’m Caro 🐳</strong>
-          <br>I'm working as a Post-Doc (PhD Defense scheduled for June 2024) at the <a href=\"https://se.ewi.tudelft.nl/\">Software Engineering Research Group</a> of <a href=\"https://www.tudelft.nl/\">TU Delft</a>.
+          <br>I'm working as a Post-Doc (PhD Defense scheduled for July 8th 2024) at the <a href=\"https://se.ewi.tudelft.nl/\">Software Engineering Research Group</a> of <a href=\"https://www.tudelft.nl/\">TU Delft</a>.
           My research centers around amplifying tests for and with developers:
           Letting automatic test amplification tools collaborate with developers
           to generate test cases that they can use to improve their test suites 😊
