--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -12,28 +12,28 @@ main:
   photo: ""
   name: "Carolin Brandt"
   typed:
-    - text: "Post-Doc"
+    - text: "Assistant Professor"
     - text: "Researcher"
     - text: "Software Developer"
   social:
-    - title: "Twitter"
-      icon: "fab fa-twitter"
-      url: "https://twitter.com/laci_noire"
+    - title: "LinkedIn"
+      icon: "fab fa-linkedin"
+      url: "https://www.linkedin.com/in/carolin-brandt"
     - title: "GitHub"
       icon: "fab fa-github"
       url: "https://github.com/lacinoire"
-    - title: "Blog"
-      icon: "fas fa-pencil-alt"
-      url: "https://blog.carolin-brandt.de"
     # - title: "Spotify"
     #   icon: "fab fa-spotify"
     #   url: "https://www.spotify.com/"
     # - title: "Stackoverflow"
     #   icon: "fab fa-stack-overflow"
     #   url: "https://stackoverflow.com/"
-    - title: "LinkedIn"
-      icon: "fab fa-linkedin"
-      url: "https://www.linkedin.com/in/carolin-brandt"
+    - title: "Blog"
+      icon: "fas fa-pencil-alt"
+      url: "https://blog.carolin-brandt.de"
+    - title: "Twitter"
+      icon: "fab fa-twitter"
+      url: "https://twitter.com/laci_noire"
   buttons:
     - title: "Write me!"
       icon: ""
