--- a/_data/content.yml
+++ b/_data/content.yml
@@ -196,22 +196,22 @@ students:
       title: "I've had the joy of supervising these awesome students"
       icon: "university"
       items:
-        - label: "Roderick de Britto Heemskerk, Master Thesis on refined code coverage metrics with Mozilla, [LinkedIn](https://www.linkedin.com/in/roderick-de-britto-heemskerk/)"
+        - label: "**Roderick de Britto Heemskerk**, Master Thesis on refined code coverage metrics with Mozilla, [LinkedIn](https://www.linkedin.com/in/roderick-de-britto-heemskerk/)"
           year: "current"
           active: 1
-        - label: "George Vegelien, Master Thesis on Flaky tests with Exact, [LinkedIn](https://www.linkedin.com/in/george-vegelien/)"
+        - label: "**George Vegelien**, Master Thesis on Flaky tests with Exact, [LinkedIn](https://www.linkedin.com/in/george-vegelien/)"
           year: "current"
           active: 1
-        - label: "Khalid El Haji, Master Thesis on Test Generation Using GitHub Copilot, [LinkedIn](https://www.linkedin.com/in/khalidelhaji/), [thesis](https://resolver.tudelft.nl/uuid:57973043-efa8-4534-9afe-c64287c22d64), also published as a [conference paper](https://carolin-brandt.de/works/elhaji-ast24)"
+        - label: "**Khalid El Haji**, Master Thesis on Test Generation Using GitHub Copilot, [LinkedIn](https://www.linkedin.com/in/khalidelhaji/), [thesis](https://resolver.tudelft.nl/uuid:57973043-efa8-4534-9afe-c64287c22d64), also published as a [conference paper](https://carolin-brandt.de/works/elhaji-ast24)"
           year: "2023"
           active: 0
-        - label: "Danyao Wang, Master Thesis on User-Guided Test Amplification, [LinkedIn](https://www.linkedin.com/in/danyao-wang-56955a200/), [thesis](https://resolver.tudelft.nl/uuid:61d45fb3-ac3c-447c-a05d-1f7499725a3b), also published as a [conference paper](https://carolin-brandt.de/works/brandt-scam23)"
+        - label: "**Danyao Wang**, Master Thesis on User-Guided Test Amplification, [LinkedIn](https://www.linkedin.com/in/danyao-wang-56955a200/), [thesis](https://resolver.tudelft.nl/uuid:61d45fb3-ac3c-447c-a05d-1f7499725a3b), also published as a [conference paper](https://carolin-brandt.de/works/brandt-scam23)"
           year: "2022"
           active: 0
-        - label: "Nienke Nijkamp, Wessel Oosterbroek, George Vegelien, Swastik Agarwal, Bachelor Thesis on various ways to improve develope-centric test amplification, also lead to two conference papers, [1](https://carolin-brandt.de/works/nijkamp-scam21), [2](https://carolin-brandt.de/works/oosterbroek-scam21)"
+        - label: "**Nienke Nijkamp, Wessel Oosterbroek, George Vegelien, and Swastik Agarwal**, Bachelor Thesis on various ways to improve develope-centric test amplification, also lead to two conference papers: [1](https://carolin-brandt.de/works/nijkamp-scam21), [2](https://carolin-brandt.de/works/oosterbroek-scam21)"
           year: "2021"
           active: 0
-        - label: "Casper Boone, Master Thesis on Save Time Fixing Broken CI Builds Without Leaving Your IDE, [LinkedIn](https://www.linkedin.com/in/casperboone/), [thesis](https://resolver.tudelft.nl/uuid:f8375d5f-3bbd-4559-863b-6951e9d6bab0), also published as a [conference paper](https://carolin-brandt.de/works/boone-icpc22)"
+        - label: "**Casper Boone**, Master Thesis on Save Time Fixing Broken CI Builds Without Leaving Your IDE, [LinkedIn](https://www.linkedin.com/in/casperboone/), [thesis](https://resolver.tudelft.nl/uuid:f8375d5f-3bbd-4559-863b-6951e9d6bab0), also published as a [conference paper](https://carolin-brandt.de/works/boone-icpc22)"
           year: "2021"
           active: 0
 
